@@ -1,5 +1,11 @@
 2005-09-24  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>
 
+	* src/view/telnetcon.h
+	src/view/telnetcon.cpp
+	: Remove g_mutex_new inline for code-reading friendly.
+
+2005-09-24  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>
+
 	* src/mainframe.h
 	src/view/telnetview.cpp
 	src/mainframe.cpp
